# HEAR_Architecture

./: CMakeLists.txt  README.md  package.xml
include/HEAR_actuation/: ActuationSystem.hpp  Actuator.hpp  EscCalib.hpp  HexaActuationSystem.hpp  QuadActuationSystem.hpp
include/HEAR_control/: BB_values.hpp  BoundingBoxController.hpp  Controller.hpp  MRFTController.hpp  MRFT_values.hpp  PIDController.hpp  PID_values.hpp
include/HEAR_core/: Block.hpp  DataMsg.hpp  Demux3D.hpp  InputPort.hpp  InvertedSwitch.hpp  Memory.hpp  MsgEmitter.hpp  MsgReceiver.hpp  Mux3D.hpp  OutputPort.hpp  Port.hpp  Switch.hpp  common_types.hpp  std_logger.hpp
include/HEAR_math/: AvgFilter.hpp  ButterFilter_2nd.hpp  ConstantFloat.hpp  Differentiator.hpp  DownSampler.hpp  HoldVal.hpp  Integrator.hpp  KalmanFilter.hpp  (+18 more)
msg/: BB_param.msg  PID_param.msg
src/: Arm.cpp  AvgFilter.cpp  BoundingBoxController.cpp  ButterFilter_2nd.cpp  ChangeInternalState.cpp  ConstantFloat.cpp  ControllerMessage.cpp  DNNConfirmationCondition.cpp  DataMessage.cpp  Demux3D.cpp  Differentiator.cpp  Disarm.cpp  DownSampler.cpp  EscCalib.cpp  Global2Inertial.cpp  HexaActuationSystem.cpp  HoldVal.cpp  InputPort.cpp  Integrator.cpp  InternalSystemStateCondition.cpp  InverseRotateVec.cpp  InvertedSwitch.cpp  KalmanFilter.cpp  MRFTController.cpp  Matrix3by3.cpp  Memory.cpp  MissionCommand.cpp  MissionPipeline.cpp  MissionScenario.cpp  MissionStateManager.cpp  MsgEmitter.cpp  MsgUavControlState.cpp  Multiply.cpp  Mux3D.cpp  NegateFloat.cpp  OutputPort.cpp  PIDController.cpp  PolyFilter.cpp  Port.cpp  QuadActuationSystem.cpp  (+27 more)
(+66 files in other folders)
