<?xml version="1.0"?>
<package format="2">
  <name>hear_architecture</name>
  <version>0.0.0</version>
  <description>The HEAR Architecture package</description>
  <maintainer email="mohamad.wahbah@outlook.com">moawahbah</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <export>
  </export>
</package>
